--- a/process.html
+++ b/process.html
@@ -12,7 +12,8 @@
 <!-- styles -->
 <link rel="stylesheet" href="./assets/css/style.css">
 <link rel="stylesheet" href="./assets/css/responsive.css">
-<title>PROCESS</title>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<title>PROGRAMS</title>
 </head>
 <body>
 <!-- header section starts here-->
@@ -41,49 +42,165 @@
   </div>
   <!-- header section ends here-->
   <div class="process">
-    <h1 class="process__heading"> Our Process </h1>
-    <p class="process__contain"> Our client service is second-to-none, and excellence is everything.
-    Our process is simple and works seamlessly for brands and agencies at all levels. Our only focus is to provide you with the most viable candidates.  </p>
-      <div class="process__contain1">
-        <img src="./assets/images/processimg.png" class="process__img" alt="process">
-      </div>
+    <h1 class="process__heading"> Our Programs </h1>
+    <p class="process__contain">We believe that making the right lifestyle change is the key to good health. If people adopt a healthy lifestyle, they automatically make better decisions about their food, movement, sleep, and stress. </p>
     </div>
 
+ <!-- section 5 starts here -->
+<!--     <div class="program__section5">
+      <div class="program__section5__image">
+        <img src="./assets/images/skin.jpg" alt="Problems">
+      </div>
+      <div class="program__section5__content">
+        <h1 >Skin Diseases</h1>
+        <ul>
+          <li>Eczema</li>
+          <li>Psoriasis</li>
+          <li>Acne / Cyst</li>
+          <li>Dark circles</li>
+          <li>Dry skin</li>
+          <li>Oily skin</li>
+          <li>Itchy skin  </li>
+          <li>Itchy scalp / Dandruff</li>
+        </ul>
+      </div>
+    </div> -->
+<!-- section 5 ends here -->
+
+
+
+
+  
+<!-- !PAGE CONTENT! -->
+<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:25px">
+
+  <!-- First Photo Grid-->
+  <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+    <div class="w3-quarter">
+      <img src="./assets/images/skin1.png" alt="Sandwich" style="width:100%">
+      <h3>Skin Diseases</h3>
+              <ul>
+          <li>Eczema</li>
+          <li>Psoriasis</li>
+          <li>Acne / Cyst</li>
+          <li>Dark circles</li>
+          <li>Dry skin</li>
+          <li>Oily skin</li>
+          <li>Itchy skin  </li>
+          <li>Itchy scalp / Dandruff</li>
+        </ul>
+    </div>
+    <div class="w3-quarter">
+      <img src="./assets/images/gut.png" alt="Steak" style="width:100%">
+            <h3>Gut Disorders</h3>
+              <ul>
+          <li>Acidity</li>
+          <li>Constipation</li>
+          <li>Indigestion</li>
+          <li>Bloating</li>
+          <li>Irritable Bowel Syndrome</li>
+          <li>Peptic (Duodenal Ulcers)</li>
+          <li>Hiatus Hernia </li>
+        </ul></div>
+    <div class="w3-quarter">
+      <img src="./assets/images/stress.png" alt="Cherries" style="width:100%">
+          <h3>Common Lifestyle Disorders</h3>
+              <ul>
+          <li>Obesity &  Weight loss program</li>
+          <li>Hypertension</li>
+          <li>Diabetes</li>
+          <li>Infertility</li>
+          <li>Binge eating</li>
+          <li>Insomnia</li>
+          <li>Varicose veins </li>
+          <li>Migraine </li>
+        </ul>
+    </div>
+    <div class="w3-quarter">
+      <img src="./assets/images/horm.png" alt="Pasta and Wine" style="width:100%">
+      <h3>Hormonal Imbalance</h3>
+          <ul>
+          <li>Menarche</li>
+          <li>PCOS</li>
+          <li>Thyroid Dysfunction</li>
+          <li>Pregnancy care (Nutrition) </li>
+          <li>Menopause</li>
+        </ul>
+    </div>
+    </div>
+ 
+  
+  <!-- Second Photo Grid-->
+  <div class="w3-row-padding w3-padding-16 w3-center">
+    <div class="w3-quarter">
+      <img src="./assets/images/detox.png" alt="Popsicle" style="width:100%">
+      <h3>15 Day Detox Plan</h3>
+      <p>How important it is for us to charge our phones, fill fuel in our cars, or for that matter just service our day to day gadgets and electronic equipment. Likewise, our body is also a beautiful machine created by God. Almost every day, it is subject to abuse by eating wrong and unhealthy food.  It is hence, extremely important to detox the body periodically to achieve a balanced state of good health. </p>
+    </div>
+    <div class="w3-quarter">
+      <img src="./assets/images/res.png" alt="Salmon" style="width:100%">
+      <h3>Respiratory Conditions </h3>
+          <ul>
+          <li>Wheezing</li>
+          <li>Chronic cough</li>
+          <li>Asthma</li>
+          <li>Allergies</li>
+          <li>Sinusitis</li>
+        </ul>
+    </div>
+    <div class="w3-quarter">
+      <img src="./assets/images/physical.png" alt="Sandwich" style="width:100%">
+      <h3>Other Conditions</h3>
+                <ul>
+          <li>Immunity Boost Program</li>
+          <li>Post-Operative Recovery</li>
+          <li>Anemia</li>
+          <li>Degenerative Arthritis</li>
+        </ul>
+    </div>
+    <div class="w3-quarter">
+      <img src="./assets/images/girls.png" alt="Croissant" style="width:100%">
+      <h3>Balanced Nutrition for children</h3>
+             <ul>
+          <li>Immunity boosting program</li>
+          <li>Detox plan 15 days</li>
+        </ul>
+    </div>
+  </div>
+</div>
 
 <!-- footer section starts here-->
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/footerimg.png" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo.jpeg" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
             <h6 class="footer__quicklinksheader">Quick Links </h6>
               <ul>
               <li><a href="about.html" class="footer__menu">About Us</a></li>
-              <li><a href="services.html" class="footer__menu">Services</a></li>
-              <li><a href="process.html" class="footer__menu">Our Process</a></li>
-              <li><a href="whyus.html" class="footer__menu">Why Us?</a></li>
-              <li><a href="careers.html" class="footer__menu">Careers</a></li>
+              <li><a href="services.html" class="footer__menu">Consult</a></li>
+              <li><a href="process.html" class="footer__menu">Our Programs</a></li>
+              <li><a href="whyus.html" class="footer__menu">Testimonials</a></li>
+              <li><a href="wwww.renaessentials.com" class="footer__menu">Shop</a></li>
               <li><a href="contact.html" class="footer__menu">Contact Us</a></li>
               </ul>
           </div>
             <div class="footer__register myClass">
               <h5 class="footer__registerheader">Registered Office </h5>
                 <p class="footer__regaddress">
-                  138, Elegant Supreme  <br>
-                  304, 2,Horamavu Main Rd,  <br>
-                  Banaswadi <br>
-                  Bengaluru - 560043<br>
-                  Karanataka, India </p>
+                  Flat:4131 TVH Lumbini Square,   <br>
+                    No.127 bricklyn road <br>
+                  Purasaiwakkam<br>
+                  Chennai - 600007<br>
+                  Tamil Nadu, India </p>
             </div>
           <div class="footer__share myClass">
-            <h5 class="footer__shareheader">For Career,</h5>
-              <p class="footer__shareaddress"><img src="./assets/images/envelope.png" class="envelope" alt="envelope"> <a href="mailto:career@theuxgurus.com" class="footer__mail" title="careers">career@theuxgurus.com </a></p>
                 <div class="footer__business">
                     <h5 class="footer__contactheader"> For business enquiries,</h5>
-                      <p class="footer__contdetails"><img src="./assets/images/envelope.png" class="envelope" alt="envelope"> <a href="mailto:admin@theuxgurus.com" class="footer__mail" title="careers">admin@theuxgurus.com </a></p>
-                      <p class="footer__contdetails"><img src="./assets/images/call.png" class="call" alt="call"> <a class="footer__mail" href="tel:01234567890">+91 9113894762</a></p>
+                      <p class="footer__contdetails"><img src="./assets/images/envelope.png" class="envelope" alt="envelope"> <a href="mailto:reenajaindoc@gmail.com" class="footer__mail" title="careers">reenajaindoc@gmail.com </a></p>
+                      <p class="footer__contdetails"><img src="./assets/images/call.png" class="call" alt="call"> <a class="footer__mail" href="tel:01234567890">+91 98413 43513</a></p>
                 </div>
           </div>
             <div class="footer__contact myClass">
@@ -98,7 +215,7 @@
       </div>
     </div>
       <hr >
-        <p class="footer__copyright">© Copyright 2019 UXGURUS</p>
+        <p class="footer__copyright">© Copyright 2022 REENA JAIN </p>
   </div>
 <!-- footer section ends here-->
 <script
@@ -107,6 +224,5 @@
   crossorigin="anonymous"></script>
   <script src="./js/main.js"></script> 
 <script src="./js/resCarousel.js"></script>
-<script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: '5ea1c4e0-7329-4219-9b41-8ebe7a8c88d1', f: true }); done = true; } }; })();</script>
 </body>
 </html>
