--- a/contact.html
+++ b/contact.html
@@ -18,22 +18,22 @@
 <!-- header section starts here-->
   <div class="header">
     <h1 class="header__logoH1">
-      <a class="header__logo" title="UXGURUS" href="index.html">
+      <a class="header__logo" title="REENA ESSENTIALS" href="index.html">
       </a>
     </h1>
-       <div id="menuToggle">
+          <div id="menuToggle">
               <input type="checkbox" />
                   <span></span>
                   <span></span>
                   <span></span>
              </div>
       <div class="header__navbar" >
-          <ul class="header__navbarli" id="header_navbarli">
+          <ul class="header__navbarli"  id="header_navbarli">
             <li> <a class="header__navbarlist" href="about.html" title="about us"> About Us</a></li>
-            <li> <a class="header__navbarlist" href="services.html" title="services">Services</a></li>
-            <li> <a class="header__navbarlist" href="process.html" title="our process">Our Process</a></li>
-            <li> <a class="header__navbarlist"  href="whyus.html" title="why us?"> Why Us?</a></li>
-            <li> <a class="header__navbarlist" href="careers.html" title="carrers ">Careers</a></li>
+            <li> <a class="header__navbarlist" href="Consult.html" title="Consult">Consult</a></li>
+            <li> <a class="header__navbarlist" href="ourprograms.html" title="our Programs">Our Programs</a></li>
+            <li> <a class="header__navbarlist"  href="testimonial.html" title="Testimonials"> Testimonials</a></li>
+            <li> <a class="header__navbarlist" href="wwww.renaessentials.com" title="shop ">Shop</a></li>
             <li class="current"> <a class="header__navbarlist"  href="contact.html" title="contact ">Contact Us</a></li>
           </ul>
       </div>
@@ -79,7 +79,7 @@
               <li><a href="services.html" class="footer__menu">Consult</a></li>
               <li><a href="process.html" class="footer__menu">Our Programs</a></li>
               <li><a href="whyus.html" class="footer__menu">Testimonials</a></li>
-              <li><a href="careers.html" class="footer__menu">Shop</a></li>
+              <li><a href="wwww.renaessentials.com" class="footer__menu">Shop</a></li>
               <li><a href="contact.html" class="footer__menu">Contact Us</a></li>
               </ul>
           </div>
@@ -95,7 +95,7 @@
           <div class="footer__share myClass">
                 <div class="footer__business">
                     <h5 class="footer__contactheader"> For business enquiries,</h5>
-                      <p class="footer__contdetails"><img src="./assets/images/envelope.png" class="envelope" alt="envelope"> <a href="mailto:admin@theuxgurus.com" class="footer__mail" title="careers">reenajaindoc@gmail.com </a></p>
+                      <p class="footer__contdetails"><img src="./assets/images/envelope.png" class="envelope" alt="envelope"> <a href="mailto:reenajaindoc@gmail.com" class="footer__mail" title="careers">reenajaindoc@gmail.com </a></p>
                       <p class="footer__contdetails"><img src="./assets/images/call.png" class="call" alt="call"> <a class="footer__mail" href="tel:01234567890">+91 98413 43513</a></p>
                 </div>
           </div>
