--- a/ourprograms.html
+++ b/ourprograms.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -32,10 +32,10 @@
       <div class="header__navbar" >
           <ul class="header__navbarli"  id="header_navbarli">
             <li> <a class="header__navbarlist" href="about.html" title="about us"> About Us</a></li>
-            <li> <a class="header__navbarlist" href="services.html" title="services">Services</a></li>
-            <li class="current"> <a class="header__navbarlist" href="process.html" title="our process">Our Process</a></li>
-            <li> <a class="header__navbarlist"  href="whyus.html" title="why us?"> Why Us?</a></li>
-            <li> <a class="header__navbarlist" href="careers.html" title="carrers ">Careers</a></li>
+            <li> <a class="header__navbarlist" href="Consult.html" title="Consult">Consult</a></li>
+            <li class="current"> <a class="header__navbarlist" href="ourprograms.html" title="our Programs">Our Programs</a></li>
+            <li> <a class="header__navbarlist"  href="testimonial.html" title="Testimonials"> Testimonials</a></li>
+            <li> <a class="header__navbarlist" href="wwww.renaessentials.com" title="shop ">Shop</a></li>
             <li> <a class="header__navbarlist"  href="contact.html" title="contact ">Contact Us</a></li>
           </ul>
       </div>
