--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
             <li> <a class="header__navbarlist" href="Consult.html" title="Consult">Consult</a></li>
             <li> <a class="header__navbarlist" href="ourprograms.html" title="our Programs">Our Programs</a></li>
             <li> <a class="header__navbarlist"  href="testimonial.html" title="Testimonials"> Testimonials</a></li>
+            <li> <a class="header__navbarlist" href="health.html" title="our Programs">Health Calculators</a></li>
             <li> <a class="header__navbarlist" href="wwww.renaessentials.com" title="shop ">Shop</a></li>
             <li> <a class="header__navbarlist"  href="contact.html" title="contact ">Contact Us</a></li>
           </ul>
@@ -82,7 +83,7 @@
  <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo.jpeg" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
