--- a/consult.html
+++ b/consult.html
@@ -33,6 +33,7 @@
             <li class="current"> <a class="header__navbarlist" href="Consult.html" title="Consult">Consult</a></li>
             <li> <a class="header__navbarlist" href="ourprograms.html" title="our Programs">Our Programs</a></li>
             <li > <a class="header__navbarlist"  href="testimonial.html" title="Testimonials"> Testimonials</a></li>
+            <li> <a class="header__navbarlist" href="health.html" title="our Programs">Health Calculators</a></li>
             <li> <a class="header__navbarlist" href="wwww.renaessentials.com" title="shop ">Shop</a></li>
             <li> <a class="header__navbarlist"  href="contact.html" title="contact ">Contact Us</a></li>
           </ul>
@@ -56,6 +57,8 @@
         <img src="./assets/images/banner2.jpg" alt="">
         <div class="consult_banner__text">Meet me at my clinic</div>
         <a href="contact.html"><button class="consult_banner__button">BOOK AN APPOINTMENT</button></a>
+        <div class="consult_banner__text1">Meet me Online</div>
+        <a href="contact.html"><button class="consult_banner__button1">BOOK A CONSULTATION</button></a>
   </div>
 <!-- banner section ends here-->
   
@@ -63,7 +66,7 @@
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo.jpeg" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
