--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id="menuToggle">
               <input type="checkbox" />
                   <span></span>
-                  <span></span>
+                  <span></span> <li><a href="process.html" class="footer__menu"></a></li>
                   <span></span>
              </div>
       <div class="header__navbar" >
@@ -33,6 +33,7 @@
             <li> <a class="header__navbarlist" href="Consult.html" title="Consult">Consult</a></li>
             <li> <a class="header__navbarlist" href="ourprograms.html" title="our Programs">Our Programs</a></li>
             <li> <a class="header__navbarlist"  href="testimonial.html" title="Testimonials"> Testimonials</a></li>
+            <li> <a class="header__navbarlist" href="health.html" title="our Programs">Health Calculators</a></li>
             <li> <a class="header__navbarlist" href="wwww.renaessentials.com" title="shop ">Shop</a></li>
             <li> <a class="header__navbarlist"  href="contact.html" title="contact ">Contact Us</a></li>
           </ul>
@@ -61,7 +62,7 @@
      <img src="./assets/images/dp.jpeg" class="section3__img" alt="section3img">
     <div class="section3__contain">
       <p class="section3__contain1"> Meet Dr. Reena Jain<br/><span>Nature Cure Health Specialist<span></p>
-      <p class="section3__contain2">Dr. Reena Jain is a Naturopath & a Nutritionist, currently practicing for the last 6 years. Her love for Nature Cure and an unquenchable thirst within her to help, to give back to society, led her on this soulful and mindful journey. She has been instrumental in healing many across the globe who reached out to her for sincere guidance related to their physical and mental well being. <br/>
+      <p class="section3__contain2">Dr. Reena Jain is a Naturopath & a Nutritionist, currently practicing for the last 8 years. Her love for Nature Cure and an unquenchable thirst within her to help, to give back to society, led her on this soulful and mindful journey. She has been instrumental in healing many across the globe who reached out to her for sincere guidance related to their physical and mental well being. <br/>
       She holds an M.D in Naturopathy. Her desire to dive deep into the subject led her to later pursue her Ph.D. in Naturopathy. She also holds a Diploma degree in Clinical Nutrition and Dietetics. Her motto is  "Simple living and easy thinking”. <br/>
       Dr. Reena's treatment sessions include building a great rapport with the client, understanding the patient's condition, their lifestyle, and helping them change it in due course of time, thereby significantly improving their quality and essence of life. <br/>
       Her forte lies in dealing with lifestyle disorders and psychosomatic conditions. The programs are personalized and customized based on client requirements. Dr. Reena also believes that "If the upstairs is kept clean, the downstairs will automatically be clean". To explain this, she lays great emphasis on the mental and emotional well being. She also curates Mental Health Fitness Programs that have helped a large number of people cope up with their mundane lives and help them achieve optimal health.
@@ -209,7 +210,7 @@
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo.jpeg" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
@@ -218,6 +219,7 @@
               <li><a href="about.html" class="footer__menu">About Us</a></li>
               <li><a href="services.html" class="footer__menu">Consult</a></li>
               <li><a href="process.html" class="footer__menu">Our Programs</a></li>
+              <li><a href="process.html" class="footer__menu">Health Calculators</a></li>
               <li><a href="whyus.html" class="footer__menu">Testimonials</a></li>
               <li><a href="wwww.renaessentials.com" class="footer__menu">Shop</a></li>
               <li><a href="contact.html" class="footer__menu">Contact Us</a></li>
