--- a/ourprograms.html
+++ b/ourprograms.html
@@ -35,6 +35,7 @@
             <li> <a class="header__navbarlist" href="Consult.html" title="Consult">Consult</a></li>
             <li class="current"> <a class="header__navbarlist" href="ourprograms.html" title="our Programs">Our Programs</a></li>
             <li> <a class="header__navbarlist"  href="testimonial.html" title="Testimonials"> Testimonials</a></li>
+            <li> <a class="header__navbarlist" href="health.html" title="our Programs">Health Calculators</a></li>
             <li> <a class="header__navbarlist" href="wwww.renaessentials.com" title="shop ">Shop</a></li>
             <li> <a class="header__navbarlist"  href="contact.html" title="contact ">Contact Us</a></li>
           </ul>
@@ -71,13 +72,14 @@
 
 
   
+  
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:25px">
 
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="./assets/images/skin1.png" alt="Sandwich" style="width:100%">
+      <img src="./assets/images/skin1.png" alt="Sandwich">
       <h3>Skin Diseases</h3>
               <ul>
           <li>Eczema</li>
@@ -91,7 +93,7 @@
         </ul>
     </div>
     <div class="w3-quarter">
-      <img src="./assets/images/gut.png" alt="Steak" style="width:100%">
+      <img src="./assets/images/gut.png" alt="Steak">
             <h3>Gut Disorders</h3>
               <ul>
           <li>Acidity</li>
@@ -103,7 +105,7 @@
           <li>Hiatus Hernia </li>
         </ul></div>
     <div class="w3-quarter">
-      <img src="./assets/images/stress.png" alt="Cherries" style="width:100%">
+      <img src="./assets/images/stress.png" alt="Cherries" >
           <h3>Common Lifestyle Disorders</h3>
               <ul>
           <li>Obesity &  Weight loss program</li>
@@ -117,7 +119,7 @@
         </ul>
     </div>
     <div class="w3-quarter">
-      <img src="./assets/images/horm.png" alt="Pasta and Wine" style="width:100%">
+      <img src="./assets/images/horm.png" alt="Pasta and Wine" >
       <h3>Hormonal Imbalance</h3>
           <ul>
           <li>Menarche</li>
@@ -133,12 +135,12 @@
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="./assets/images/detox.png" alt="Popsicle" style="width:100%">
+      <img src="./assets/images/detox.png" alt="Popsicle" >
       <h3>15 Day Detox Plan</h3>
       <p>How important it is for us to charge our phones, fill fuel in our cars, or for that matter just service our day to day gadgets and electronic equipment. Likewise, our body is also a beautiful machine created by God. Almost every day, it is subject to abuse by eating wrong and unhealthy food.  It is hence, extremely important to detox the body periodically to achieve a balanced state of good health. </p>
     </div>
     <div class="w3-quarter">
-      <img src="./assets/images/res.png" alt="Salmon" style="width:100%">
+      <img src="./assets/images/res.png" alt="Salmon" >
       <h3>Respiratory Conditions </h3>
           <ul>
           <li>Wheezing</li>
@@ -149,7 +151,7 @@
         </ul>
     </div>
     <div class="w3-quarter">
-      <img src="./assets/images/physical.png" alt="Sandwich" style="width:100%">
+      <img src="./assets/images/physical.png" alt="Sandwich">
       <h3>Other Conditions</h3>
                 <ul>
           <li>Immunity Boost Program</li>
@@ -159,7 +161,7 @@
         </ul>
     </div>
     <div class="w3-quarter">
-      <img src="./assets/images/girls.png" alt="Croissant" style="width:100%">
+      <img src="./assets/images/girls.png" alt="Croissant" >
       <h3>Balanced Nutrition for children</h3>
              <ul>
           <li>Immunity boosting program</li>
@@ -173,7 +175,7 @@
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo.jpeg" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
