--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id="menuToggle">
               <input type="checkbox" />
                   <span></span>
-                  <span></span> <li><a href="process.html" class="footer__menu"></a></li>
+                  <span></span>
                   <span></span>
              </div>
       <div class="header__navbar" >
