--- a/health.html
+++ b/health.html
@@ -140,15 +140,16 @@
                           <input type="number" name="age" id="age11"   placeholder="Age" size="10">
                           <br><br>
                           <input type="number" name="weight" size="10" id="weight11"placeholder="Weight in KG" > <select type="multiple" name="weightunits">
-                          <option value="kilos" selected="selected">kilos</option>
+                          <!-- <option value="kilos" selected="selected">kilos</option>
                           <option value="pounds">pounds</option>
-                          </select><br><br>
+                          </select><br><br> -->
                           <input type="number" name="height" id="height11"size="10" placeholder="Height in CM" >
-                          <select type="multiple" name="heightunits">
+                          <!-- <select type="multiple" name="heightunits">
                           <option value="cm" selected="selected">cm</option>
                           <option value="inches">inches</option>
                           </select>
-                          <br><br>
+                          <br><br> -->
+                          <input type="number" id="fat11" id="height11"size="10" placeholder="My Fat" >
                           My Fat %: <input type="text" id="fat11" name="Fat(%)"><br><br>
                           <input type="button" value="Calculate BMI"  class="bmr__calculate" onClick="calculateBmi()"><br />
                           <br><br/>
