--- a/testimonial.html
+++ b/testimonial.html
@@ -97,15 +97,21 @@
             </div>
          </div>
     </section>          
+<video width="400" height="315" controls>
+  <source src="./assets/videos/video1.mp4" type="video/mp4">
 
+</video>
 <!--  slider ends from here-->
 <!-- video testimonals starts from here -->
   <div class="test__section3">
       <h1 class="video_header"> VIDEOS TESTIMONALS </h1>
        <div class="videoframe">
-       <iframe width="400" height="315" src="./assets/videos/video1.mp4" frameborder="0" allowfullscreen></iframe>
+        <video width="400" height="315" controls><source src="./assets/videos/video1.mp4" type="video/mp4"></video>
+          <video width="400" height="315" controls><source src="./assets/videos/video2.mp4" type="video/mp4"></video>
+            <video width="400" height="315" controls><source src="./assets/videos/video3.mp4" type="video/mp4"></video>
+       <!-- <iframe width="400" height="315" src="./assets/videos/video1.mp4" frameborder="0" allowfullscreen></iframe>
        <iframe width="400" height="315" src="./assets/videos/video2.mp4" frameborder="0" allowfullscreen></iframe>
-       <iframe width="400" height="315" src="./assets/videos/video3.mp4" frameborder="0" allowfullscreen></iframe>
+       <iframe width="400" height="315" src="./assets/videos/video3.mp4" frameborder="0" allowfullscreen></iframe> -->
      </div> 
   </div>
 <!-- video testimonals ends from here -->
