--- a/consult.html
+++ b/consult.html
@@ -54,7 +54,7 @@
               <img src="./assets/images/banner4.jpg" alt="">
             </figure>
         </div> -->
-        <img src="./assets/images/banner2.jpg" alt="">
+        <img src="./assets/images/banner2.jpg" alt="" class="consult__banner__img">
         <div class="consult_banner__text">Meet me at my clinic</div>
         <a href="contact.html"><button class="consult_banner__button">BOOK AN APPOINTMENT</button></a>
         <div class="consult_banner__text1">Meet me Online</div>
@@ -66,7 +66,7 @@
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo1.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
@@ -75,12 +75,13 @@
               <li><a href="about.html" class="footer__menu">About Us</a></li>
               <li><a href="services.html" class="footer__menu">Consult</a></li>
               <li><a href="process.html" class="footer__menu">Our Programs</a></li>
+              <li><a href="process.html" class="footer__menu">Health Calculators</a></li>
               <li><a href="whyus.html" class="footer__menu">Testimonials</a></li>
               <li><a href="wwww.renaessentials.com" class="footer__menu">Shop</a></li>
-              <li><a href="contact.html" class="footer__menu">Contact Us</a></li>
+              <li><a href="contact.html" class="footer__menu">Contact Us</a></li>s
               </ul>
           </div>
-            <div class="footer__register myClass">
+           <!--  <div class="footer__register myClass">
               <h5 class="footer__registerheader">Registered Office </h5>
                 <p class="footer__regaddress">
                   Flat:4131 TVH Lumbini Square,   <br>
@@ -88,7 +89,7 @@
                   Purasaiwakkam<br>
                   Chennai - 600007<br>
                   Tamil Nadu, India </p>
-            </div>
+            </div> -->
           <div class="footer__share myClass">
                 <div class="footer__business">
                     <h5 class="footer__contactheader"> For business enquiries,</h5>
@@ -99,10 +100,10 @@
             <div class="footer__contact myClass">
               <h5 class="footer__followheader"> Follow On</h5>
                 <div class="footer__social-networks">
-                  <a href="#" target="_blank" class="facebook footer-icon"><img src="./assets/images/facebook-logo.png" class="facebook" alt="fb"></a>
-                  <a href="#" target="_blank" class="twitter footer-icon"><img src="./assets/images/twitter-logo.png" class="twitter-logo" alt="twitter-logo"></a>
-                  <a href="# target="_blank" class="google footer-icon"><img src="./assets/images/linkedin-logo.png" class="linkedin" alt="linkedin-logo"></a>
-                  <a href="#" target="_blank" class="google footer-icon"><img src="./assets/images/instagram.png" class="instagram" alt="instagram-logo"></a>     
+                  <a href="https://www.facebook.com/UxgurusConsultancy" target="_blank" class="facebook footer-icon"><img src="./assets/images/facebook-logo.png" class="facebook" alt="fb"></a>
+                  <a href="https://twitter.com/UXG_Consultancy" target="_blank" class="twitter footer-icon"><img src="./assets/images/twitter-logo.png" class="twitter-logo" alt="twitter-logo"></a>
+                  <a href="https://www.linkedin.com/in/uxgurus/" target="_blank" class="google footer-icon"><img src="./assets/images/linkedin-logo.png" class="linkedin" alt="linkedin-logo"></a>
+                  <a href="https://www.instagram.com/your_uxgurus/" target="_blank" class="google footer-icon"><img src="./assets/images/instagram.png" class="instagram" alt="instagram-logo"></a>   
             </div>  
         </div>
       </div>
