--- a/ourprograms.html
+++ b/ourprograms.html
@@ -175,7 +175,7 @@
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo1.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
@@ -184,12 +184,13 @@
               <li><a href="about.html" class="footer__menu">About Us</a></li>
               <li><a href="services.html" class="footer__menu">Consult</a></li>
               <li><a href="process.html" class="footer__menu">Our Programs</a></li>
+              <li><a href="process.html" class="footer__menu">Health Calculators</a></li>
               <li><a href="whyus.html" class="footer__menu">Testimonials</a></li>
               <li><a href="wwww.renaessentials.com" class="footer__menu">Shop</a></li>
               <li><a href="contact.html" class="footer__menu">Contact Us</a></li>
               </ul>
           </div>
-            <div class="footer__register myClass">
+<!--             <div class="footer__register myClass">
               <h5 class="footer__registerheader">Registered Office </h5>
                 <p class="footer__regaddress">
                   Flat:4131 TVH Lumbini Square,   <br>
@@ -197,7 +198,7 @@
                   Purasaiwakkam<br>
                   Chennai - 600007<br>
                   Tamil Nadu, India </p>
-            </div>
+            </div> -->
           <div class="footer__share myClass">
                 <div class="footer__business">
                     <h5 class="footer__contactheader"> For business enquiries,</h5>
