--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <div class="footer">
     <div class="footer__content"> 
       <div class="footer__leftDiv">
-        <a href="#"><img src="./assets/images/logo__footer.png" class=" footer__logo" alt="logo">  </a>
+        <a href="#"><img src="./assets/images/logo1.png" class=" footer__logo" alt="logo">  </a>
       </div> 
         <div class="footer__rightDiv">
           <div class="footer__quicklinks myClass">
@@ -225,7 +225,7 @@
               <li><a href="contact.html" class="footer__menu">Contact Us</a></li>
               </ul>
           </div>
-            <div class="footer__register myClass">
+          <!--   <div class="footer__register myClass">
               <h5 class="footer__registerheader">Registered Office </h5>
                 <p class="footer__regaddress">
                   Flat:4131 TVH Lumbini Square,   <br>
@@ -233,7 +233,7 @@
                   Purasaiwakkam<br>
                   Chennai - 600007<br>
                   Tamil Nadu, India </p>
-            </div>
+            </div> -->
           <div class="footer__share myClass">
                 <div class="footer__business">
                     <h5 class="footer__contactheader"> For business enquiries,</h5>
