--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
               <base href="">
           <div id="slider">
             <figure>
-              <img src="./assets/images/banner3.jpg" alt="">
-              <img src="./assets/images/banner2.jpg" alt="">
-              <img src="./assets/images/banner1.jpg" alt="">
-              <img src="./assets/images/banner5.jpg" alt="">
-              <img src="./assets/images/banner4.jpg" alt="">
+              <img src="./assets/images/banner3.png" alt="">
+              <img src="./assets/images/banner2.png" alt="">
+              <img src="./assets/images/banner1.png" alt="">
+              <img src="./assets/images/banner5.png" alt="">
+              <img src="./assets/images/banner4.png" alt="">
             </figure>
         </div>
   </div>
